# fpng-java

./: CHANGELOG.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: arm-diagnostics.yml  fpng-publish.yml  gradle-publish.yml  sonatype-release.yml  zpng-publish.yml
benchmark/: build.gradle  gradle.properties
benchmark/src/jmh/java/com/manticore/: ByteBufferBenchmark.java  EncoderBenchmark.java  FPNGE23Benchmark.java  FPNGEBenchmark.java  FPNGEncoder23Benchmark.java  FPNGEncoderBenchmark.java  ImageIOEncoderBenchmark.java  ObjectPlanetPNGEncoderBenchmark.java  PNGEncoderBenchmark.java  PNGEncoderFastestBenchmark.java  ZPNG23Benchmark.java  ZPNGBenchmark.java
buildSrc/: build.gradle
buildSrc/src/main/groovy/com/manticore/benchmark/: JmhParetoReportTask.groovy  JmhReportTask.groovy
config/: LICENSE
config/checkstyle/: checkstyle.xml  checkstyle_checks.xml  google_checks.xml  sun_checks.xml  suppressions.xml
config/formatter/: eclipse-java-google-style.xml
config/pmd/: ruleset.xml
config/spotbugs/: spotBugsExcludeFilter.xml
encoder-java/: build.gradle
encoder-java/src/main/java/com/manticore/tools/: Encoder.java  EncoderBase.java
fpng/: CMakeLists.txt  build.gradle
fpng-java/: build.gradle
fpng-java/src/main/java/com/manticore/tools/: FPNGEncoder.java
fpng-java/src/site/sphinx/: javadoc_fpng.xml  javadoc_fpnge.xml  javadoc_snapshot.rst
fpng-java/src/test/java/com/manticore/tools/: FPNGEncoderTest.java  ThreadTest.java
fpng-java23/: build.gradle
fpng-java23/src/main/java/com/manticore/tools/: FPNGE23.java  FPNGEncoder23.java  ZPNG23.java
fpng-java23/src/test/java/com/manticore/tools/: FPNGETest.java  ThreadTest.java
fpng/src/main/cpp/: fpng.cpp
fpng/src/main/headers/: fpng.h
fpnge/: CMakeLists.txt  build.gradle
fpnge-java/: build.gradle
fpnge-java/src/main/java/com/manticore/tools/: FPNGE.java
fpnge-java/src/site/sphinx/: javadoc_snapshot.rst
fpnge-java/src/test/java/com/manticore/tools/: FPNGETest.java  ThreadTest.java
fpnge/src/main/cpp/: fpnge.cc  swapSSE.c
fpnge/src/main/headers/: fpnge.h
fpnge/src/test/cpp/: swapAVX.c  swapSSE.c
maven-test/: build.gradle
maven-test/src/test/java/com/manticore/tools/: FPNGETest.java
src/main/java/com/manticore/tools/: module-info.java
src/site/sphinx/: changelog.rst  index.rst  javadoc.rst  javadoc_fpng.rst  javadoc_fpnge.rst  usage.rst
src/site/sphinx/_static/: benchmark-pareto.html  benchmark-report.html  benchmark.ods  filesize.ods  javadoc_fpnge.xml
zpng/: CMakeLists.txt  README.md  build.gradle
zpng-java/: build.gradle
zpng-java/src/main/java/com/manticore/tools/: ZPNG.java
zpng-java/src/test/java/com/manticore/tools/: ThreadTest.java  ZPNGEncoderTest.java
zpng-java23/: build.gradle
zpng-java23/src/main/java/com/manticore/tools/: ZPNG23.java
zpng-java23/src/test/java/com/manticore/tools/: ThreadTest.java  ZPNGTest.java
zpng/src/main/cpp/: zpng.cc
zpng/src/main/headers/: zpng.h
zpng/src/test/cpp/: swapSSE.c  swapSSE3byte.c
